Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
lustre-2.7.51
Ubuntu 12.04
Kernel Version: kernel 3.2.68
-
3
-
9223372036854775807
Description
While compiling the Lustre client with newer kernel. It fails with the following error:
Command Used to compile:
./configure
--with-linux=$
--with-o2ib=$
{dkms_tree}/mlnx-ofed-kernel/$
{OFED_VERSION}/build
--disable-server
--disable-quilt
--disable-dependency-tracking
--disable-doc
--disable-utils
--disable-liblustre
--disable-snmp
--disable-zerocopy
--disable-tests
--enable-quota
make
Error:-
/var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c: In function
'll_invalidate_aliases':
/var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
'struct dentry' has no member named 'd_alias'
/var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
initialization from incompatible pointer type [-Werror]
/var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
'struct dentry' has no member named 'd_alias'
/var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
'struct dentry' has no member named 'd_alias'
/var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
'struct dentry' has no member named 'd_alias'
/var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
'struct dentry' has no member named 'd_alias'
/var/lib/dkms/lustre/2.5.24/build/lustre/llite/dcache.c:302:2: error:
'struct dentry' has no member named 'd_alias'
cc1: all warnings being treated as errors
Attachments
Issue Links
- is related to
-
LU-6215 Sync Lustre external tree with lustre linux kernel client
- Resolved