LU-6426 llite: Add check of d_alias and d_child

In some specific kernel versions like 3.2, d_alias has been moved
to d_u.d_alias and d_u.d_child has been moved to d_child in struct
dentry in <linux/dcache.h>. This patch add a check of this two
members to make the llite be compatible with those versions.

Signed-off-by: Wu Libin <lwu@ddn.com>
Change-Id: I8ae63fdd887609e2049ac5e90f2bf4ff2ab14fd4